--- a/bài1.html
+++ b/bài1.html
@@ -2,29 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title> tim gia trị max trong da</title>
+	<title> thu hanh html</title>
 </head>
 <body>
-<script >
-	function findmaxOfList(n);{
-		let a =[];
-		let count = 1;
-		while (count <= n) {
-			lisNumbers[count] = + prompt("Nhap so thu"+count);
-			count++;
-		}
-		let max = a[1];
-		let i = 2;
-		while(i<n){
-			if (max< a[i]) {
-				max = ai[i];
-			}
-			i++;
-		}
-		document.write(" max ");
-	}
-	findmaxOfList(5);
-
-</script>
+<h1> heading1</h1>
 </body>
 </html>
